[project]
name = "atmostress"
version = "0.1.0"
description = "Transforming global climate data into high-fidelity environmental mission profiles for physics-of-failure analysis."
authors = [
    {name = "Manju Srinivasa",email = "manjevas@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "meteostat (>=2.1.3,<3.0.0)",
    "pandas (<3)",
    "streamlit (>=1.54.0,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "atmostress", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
